--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,20 @@
         <version>1.10.19</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>com.sun.jersey</groupId>
+        <artifactId>jersey-test-framework</artifactId>
+        <version>1.19.4</version>
+        <type>pom</type>
+        <scope>test</scope>
+    </dependency>
 
+    <dependency>
+        <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+        <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+        <version>2.26-b03</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
 </project>
