--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
 
     <groupId>MainRestSample2</groupId>
     <artifactId>MainRestSample2</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-<dependencies>
+    <modules>
+        <module>RestCalc</module>
+    </modules>
+    <dependencies>
     <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-server</artifactId>
@@ -34,7 +38,11 @@
         <artifactId>jersey-container-servlet-core</artifactId>
         <version>2.7</version>
     </dependency>
-
+    <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1.1</version>
+    </dependency>
 
     <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
